changed file description

--- a/project1/task1/EDA.ipynb
+++ b/project1/task1/EDA.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file contains the code for subtask 2 of task 1 of project 1 in Machine Learning for Healthcare offered at ETH Zurich in FS2024"
+    "This file contains the code for question 1 of task 1 of project 1 in Machine Learning for Healthcare offered at ETH Zurich in FS2024"
    ]
   },
   {
