added comment about validation set

--- a/project1/task2/EDA.ipynb
+++ b/project1/task2/EDA.ipynb
@@ -356,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thus, our validation set consists only of normal and Bacterial Pneumonia images. The very limited size and the lack of Viral Pneumonia images in the validation set have to be kept in the back of our minds when analyzing the model performance on the validation set."
+    "Thus, our validation set consists only of normal and Bacterial Pneumonia images. The very limited size and the lack of Viral Pneumonia images in the validation set have to be kept in the back of our minds when analyzing the model performance on the validation set. Additionally, manual visual inspection of some of the validation set Pneumonia images revealed that some have the label 'A-P'in the top left corner. Thus, we have to pay attention to get rid of this label in the preprocessing step such that the model does not just learn the label in the image."
    ]
   },
   {
