added cnn utils

--- a/project1/task2/EDA.ipynb
+++ b/project1/task2/EDA.ipynb
@@ -102,12 +102,12 @@
     "            desc=f\"Reading {subfolder} {folder_path.split('/')[-1]} images\",\n",
     "        ):\n",
     "\n",
-    "            # read in images in grayscale foramt\n",
-    "            image_gray = cv2.imread(\n",
+    "            # read in images\n",
+    "            image = cv2.imread(\n",
     "                os.path.join(folder_path, subfolder, file)\n",
     "            )\n",
     "            # resize images to the same size\n",
-    "            image_resized = cv2.resize(image_gray, img_size)\n",
+    "            image_resized = cv2.resize(image, img_size)\n",
     "            images.append(image_resized)\n",
     "            \n",
     "            # if pneumonia_subgroup is True, we want to differentiate between\n",
@@ -535,7 +535,7 @@
    "metadata": {},
    "source": [
     "## Preprocessing\n",
-    "See the [pytorch documentation](https://pytorch.org/vision/stable/transforms.html) for a more extensive list of available transformations."
+    "See the [pytorch documentation](https://pytorch.org/vision/stable/transforms.html) for a more extensive list of available transformations. Note that transformations below are the same as the ones used in the following [kaggle](https://www.kaggle.com/code/teyang/pneumonia-detection-resnets-pytorch) post."
    ]
   },
   {
