--- a/project1/task1/neural_additive_model/experiments.ipynb
+++ b/project1/task1/neural_additive_model/experiments.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The blackcellmagic extension is already loaded. To reload it, use:\n",
-      "  %reload_ext blackcellmagic\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -34,31 +25,31 @@
     "from pickle import load\n",
     "import shap\n",
     "\n",
+    "from neural_additive_model import NAM\n",
+    "\n",
+    "\n",
+    "\n",
     "import sys\n",
     "sys.path.append(\"../..\")\n",
-    "from utils.utils import set_all_seeds\n",
-    "\n",
-    "%load_ext blackcellmagic"
+    "from utils.utils import set_all_seeds, test, get_n_units"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "SEED = 123\n",
     "GRID_SIZE = 10_000\n",
     "\n",
-    "DEVICE = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<span style=\"color:red\">Conceptually, how does the model compare to Logistic Regression and MLPs (1 Pt)\n",
-    "Seperate MLP for every feature that get aggregated in the end. The model is a combination of multiple MLPs that are trained on different features. The output of each MLP is then aggregated to get the final output. This is different from Logistic Regression where the output is a linear combination of the input features.</span>"
+    "DEVICE = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
+    "HIDDEN_PROFILE = [1024]\n",
+    "USE_EXU = False\n",
+    "USE_RELU_N = False\n",
+    "WITHIN_FEATURE_DROPOUT = 0.4\n",
+    "FEATURE_DROPOUT = 0.0"
    ]
   },
   {
@@ -70,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +88,7 @@
     "    X_train[\"cholesterol\"],\n",
     "    bins=[-1, 10, 200, 240, 1000],\n",
     "    labels=[\"imputed\", \"normal\", \"borderline\", \"high\"],\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -109,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,26 +116,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "preprocessor = load(open(\"../models/preprocessor.pkl\", \"rb\"))\n",
-    "model = torch.load(\"../models/neural_additive_model.pth\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 192,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "categorical_cols = [col for col in X_train.columns if X_train.nunique()[col] < 5]\n",
     "numeric_cols = [col for col in X_train.columns if col not in categorical_cols]\n",
     "\n",
     "# preprocess data\n",
     "X_train_preprocessed = preprocessor.fit_transform(X_train)\n",
     "X_test_preprocessed = preprocessor.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_all_seeds(SEED)\n",
+    "model = torch.load(\"../models/neural_additive_model.pth\", map_location=DEVICE)"
    ]
   },
   {
@@ -163,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +290,7 @@
        "4     170               N      0.0       Up        high  "
       ]
      },
-     "execution_count": 193,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +492,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +747,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,12 +767,12 @@
     "# set model to eval mode to disable dropout\n",
     "model.eval()\n",
     "# get logits for each feature\n",
-    "feature_logits = model(input.to(DEVICE))[1].detach().cpu().numpy()\n"
+    "feature_logits = model(input.to(DEVICE))[1].detach().cpu().numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1113,10 +1106,10 @@
        "</script>"
       ],
       "text/plain": [
-       "<shap.plots._force.AdditiveForceArrayVisualizer at 0x7ff842360c40>"
+       "<shap.plots._force.AdditiveForceArrayVisualizer at 0x7ff0058ad0c0>"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1133,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
