used correct model weights for cnn experiments

--- a/project1/task2/data_randomization_test/cnn_performance_comparison.ipynb
+++ b/project1/task2/data_randomization_test/cnn_performance_comparison.ipynb
@@ -41,7 +41,6 @@
     "    get_pneumonia_images,\n",
     "    PneumoniaDataset,\n",
     "    set_all_seeds,\n",
-    "    train_and_validate,\n",
     "    test,\n",
     "    EarlyStopping,\n",
     ")\n",
@@ -114,12 +113,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading NORMAL train images: 100%|██████████| 1341/1341 [00:13<00:00, 100.90it/s]\n",
-      "Reading PNEUMONIA train images: 100%|██████████| 3875/3875 [00:14<00:00, 275.92it/s]\n",
-      "Reading NORMAL val images: 100%|██████████| 8/8 [00:00<00:00, 151.79it/s]\n",
-      "Reading PNEUMONIA val images: 100%|██████████| 8/8 [00:00<00:00, 301.46it/s]\n",
-      "Reading NORMAL test images: 100%|██████████| 234/234 [00:01<00:00, 125.73it/s]\n",
-      "Reading PNEUMONIA test images: 100%|██████████| 390/390 [00:01<00:00, 320.34it/s]\n"
+      "Reading NORMAL train images: 100%|██████████| 1341/1341 [00:13<00:00, 101.26it/s]\n",
+      "Reading PNEUMONIA train images: 100%|██████████| 3875/3875 [00:13<00:00, 277.20it/s]\n",
+      "Reading NORMAL val images: 100%|██████████| 8/8 [00:00<00:00, 151.81it/s]\n",
+      "Reading PNEUMONIA val images: 100%|██████████| 8/8 [00:00<00:00, 300.55it/s]\n",
+      "Reading NORMAL test images: 100%|██████████| 234/234 [00:01<00:00, 125.60it/s]\n",
+      "Reading PNEUMONIA test images: 100%|██████████| 390/390 [00:01<00:00, 320.37it/s]\n"
      ]
     }
    ],
@@ -254,7 +253,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fdcb2365c60>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f033b4d9930>"
       ]
      },
      "execution_count": 9,
@@ -379,7 +378,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fde1df03670>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f04b7ef7df0>"
       ]
      },
      "execution_count": 13,
