added final local changes from jan

--- a/project1/task1/neural_additive_model/hyperparameter_tuning.ipynb
+++ b/project1/task1/neural_additive_model/hyperparameter_tuning.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the following, we will tune the most important hyperparameters of the Neural Additive Model (NAM) using Optuna since we realised during training that the model is very sensitive to the choice of some hyperparameters. We will propose similar hyperparameter values as the ones used in the [NAM paper](https://arxiv.org/pdf/2004.13912.pdf)."
+    "In the following, we will tune the most important hyperparameters of the Neural Additive Model (NAM) using Optuna since we realised during training that the model is very sensitive to the choice of some hyperparameters. We will use a very similar hyperparameter search space as the one used in appendix A.6 of the [NAM paper](https://arxiv.org/pdf/2004.13912.pdf)."
    ]
   },
   {
@@ -32,7 +32,7 @@
     "from skimpy import clean_columns\n",
     "from pickle import load\n",
     "\n",
-    "from sklearn.model_selection import train_test_split, StratifiedKFold\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
     "from torch.utils.data import DataLoader\n",
     "from neural_additive_model import NAM\n",
     "\n",
