--- a/project1/task1/mlp/mlp_performance.ipynb
+++ b/project1/task1/mlp/mlp_performance.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,6 @@
     "import shap\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "#from neural_additive_model import NAM\n",
     "from mlp import MLP\n",
     "import torch.nn as nn\n",
     "\n",
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +82,7 @@
     "SCHEDULER_GAMMA = 0.9\n",
     "\n",
     "OPTIMIZER = torch.optim.Adam\n",
-    "CRITERION = penalized_binary_cross_entropy\n",
+    "CRITERION = nn.BCEWithLogitsLoss()\n",
     "\n",
     "OUTPUT_REGULARIZATION = 0.0058\n",
     "L2_REGULARIZATION = 3.87e-5\n",
@@ -100,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,12 +188,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "set_all_seeds(SEED)\n",
-    "pretrained_mlp = torch.load(\"../models/mlp.pth\")"
+    "pretrained_mlp = torch.load(\"../models/mlp.pth\", map_location=DEVICE)"
    ]
   },
   {
@@ -206,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +231,6 @@
     }
    ],
    "source": [
-    "\n",
     "test_loss, test_f1_score, balanced_accuracy, model_probs, y_true = test(\n",
     "    model=pretrained_mlp,\n",
     "    test_loader=test_loader,\n",
@@ -246,16 +244,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1ed47117210>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f23b4f9c160>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -281,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
