--- a/project1/task2/data_randomization_test/cnn_performance_comparison.ipynb
+++ b/project1/task2/data_randomization_test/cnn_performance_comparison.ipynb
@@ -113,12 +113,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading NORMAL train images: 100%|██████████| 1341/1341 [00:13<00:00, 101.26it/s]\n",
-      "Reading PNEUMONIA train images: 100%|██████████| 3875/3875 [00:13<00:00, 277.20it/s]\n",
-      "Reading NORMAL val images: 100%|██████████| 8/8 [00:00<00:00, 151.81it/s]\n",
-      "Reading PNEUMONIA val images: 100%|██████████| 8/8 [00:00<00:00, 300.55it/s]\n",
-      "Reading NORMAL test images: 100%|██████████| 234/234 [00:01<00:00, 125.60it/s]\n",
-      "Reading PNEUMONIA test images: 100%|██████████| 390/390 [00:01<00:00, 320.37it/s]\n"
+      "Reading NORMAL train images: 100%|██████████| 1341/1341 [00:13<00:00, 99.79it/s] \n",
+      "Reading PNEUMONIA train images: 100%|██████████| 3875/3875 [00:14<00:00, 274.16it/s]\n",
+      "Reading NORMAL val images: 100%|██████████| 8/8 [00:00<00:00, 150.34it/s]\n",
+      "Reading PNEUMONIA val images: 100%|██████████| 8/8 [00:00<00:00, 298.12it/s]\n",
+      "Reading NORMAL test images: 100%|██████████| 234/234 [00:01<00:00, 124.91it/s]\n",
+      "Reading PNEUMONIA test images: 100%|██████████| 390/390 [00:01<00:00, 317.53it/s]\n"
      ]
     }
    ],
@@ -253,7 +253,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f033b4d9930>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7ff90c46bfd0>"
       ]
      },
      "execution_count": 9,
@@ -378,7 +378,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f04b7ef7df0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7ff853fdc250>"
       ]
      },
      "execution_count": 13,
