tight layout for lasso plots

--- a/project1/task1/logistic_lasso.ipynb
+++ b/project1/task1/logistic_lasso.ipynb
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "5f7c9d7e659036f8",
    "metadata": {
     "ExecuteTime": {
@@ -707,7 +707,7 @@
     {
      "data": {
       "text/plain": [
-       "<Figure size 1000x600 with 0 Axes>"
+       "<Figure size 1000x1000 with 0 Axes>"
       ]
      },
      "metadata": {},
@@ -726,13 +726,13 @@
    ],
    "source": [
     "coefs_sorted = coefs.iloc[coefs.Coefficients.abs().argsort()[::-1]]\n",
-    "plt.figure(figsize=(10, 6))\n",
+    "plt.figure(figsize=(10, 10))\n",
     "coefs_sorted.plot(kind=\"bar\")\n",
     "plt.xticks(range(len(coefs_sorted)), coefs_sorted.index, rotation=90)\n",
     "plt.ylabel(\"Coefficient\")\n",
     "plt.title(\"\")\n",
     "\n",
-    "plt.savefig(\"lasso_coefficients.png\")"
+    "plt.savefig(\"lasso_coefficients.png\", bbox_inches=\"tight\")"
    ]
   },
   {
