changed config file name

--- a/project2/transformer/transformer.ipynb
+++ b/project2/transformer/transformer.ipynb
@@ -29,15 +29,11 @@
     "import torch.nn.functional as F\n",
     "import yaml\n",
     "from icecream import ic\n",
-    "import math\n",
-    "from tqdm import tqdm, trange\n",
-    "import os\n",
+    "\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns   \n",
     "\n",
-    "import copy\n",
-    "from tqdm import tqdm\n",
     "from sklearn.metrics import (\n",
     "    f1_score, \n",
     "    balanced_accuracy_score,\n",
@@ -53,7 +49,7 @@
     "from torch.utils.tensorboard import SummaryWriter\n",
     "from imblearn.over_sampling import SMOTE\n",
     "\n",
-    "import warnings\n",
+    "\n",
     "from transformer_utils import PTB_Dataset, test\n",
     "\n",
     "from transformer import Transformer\n",
@@ -71,7 +67,7 @@
    "source": [
     "DEVICE = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "with open(\"config.yaml\", \"r\") as file:\n",
+    "with open(\"transformer_config.yaml\", \"r\") as file:\n",
     "    config = yaml.safe_load(file)"
    ]
   },
