--- a/project2/task1/classical_ml/lightgbm_performance_eval.ipynb
+++ b/project2/task1/classical_ml/lightgbm_performance_eval.ipynb
@@ -635,7 +635,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f1ddc6d1bd0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fd7422c7850>"
       ]
      },
      "execution_count": 10,
@@ -831,8 +831,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Feature Extraction: 100%|██████████| 80/80 [00:32<00:00,  2.50it/s]\n",
-      "Feature Extraction: 100%|██████████| 79/79 [00:10<00:00,  7.63it/s]\n"
+      "Feature Extraction: 100%|██████████| 80/80 [00:27<00:00,  2.89it/s]\n",
+      "Feature Extraction: 100%|██████████| 79/79 [00:07<00:00, 10.80it/s]\n"
      ]
     }
    ],
@@ -993,7 +993,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f1db00010c0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fd741c312d0>"
       ]
      },
      "execution_count": 25,
