--- a/project2/task1/classical_ml/lightgbm_performance_eval.ipynb
+++ b/project2/task1/classical_ml/lightgbm_performance_eval.ipynb
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,16 +629,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fd7422c7850>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f6857e0fb50>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -831,8 +831,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Feature Extraction: 100%|██████████| 80/80 [00:27<00:00,  2.89it/s]\n",
-      "Feature Extraction: 100%|██████████| 79/79 [00:07<00:00, 10.80it/s]\n"
+      "Feature Extraction: 100%|██████████| 80/80 [00:27<00:00,  2.88it/s]\n",
+      "Feature Extraction: 100%|██████████| 79/79 [00:07<00:00, 10.65it/s]\n"
      ]
     }
    ],
@@ -993,7 +993,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fd741c312d0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f66479f61a0>"
       ]
      },
      "execution_count": 25,
