reran logistic regression

--- a/project2/task1/classical_ml/logistic_regression_performance_eval.ipynb
+++ b/project2/task1/classical_ml/logistic_regression_performance_eval.ipynb
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,16 +637,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f013c3d3100>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f292e2e1180>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -838,16 +838,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Feature Extraction: 100%|██████████| 80/80 [00:28<00:00,  2.82it/s]\n",
-      "Feature Extraction: 100%|██████████| 79/79 [00:07<00:00, 10.24it/s]\n"
+      "Feature Extraction: 100%|██████████| 80/80 [00:27<00:00,  2.90it/s]\n",
+      "Feature Extraction: 100%|██████████| 79/79 [00:07<00:00, 10.70it/s]\n"
      ]
     }
    ],
    "source": [
     "# We will follow this tutorial:\n",
     "# https://towardsdatascience.com/expanding-your-regression-repertoire-with-regularisation-903d2c9f7b28\n",
-    "# but will use the ComprehensiveFCParameters instead of the EfficientFCParameters\n",
-    "# for feature extraction\n",
+    "# and will use the EfficientFCParameters function for feature extraction\n",
     "X_train_augmented = extract_features(\n",
     "    X_train_melted,\n",
     "    column_id=\"id\",\n",
@@ -1423,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1434,16 +1433,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f007ae7dae0>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f29b3ac90f0>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1466,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
