reran all classical ml methods with removed padding

--- a/project2/task1/classical_ml/lightgbm_performance_eval.ipynb
+++ b/project2/task1/classical_ml/lightgbm_performance_eval.ipynb
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,16 +629,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f8afc76b310>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fe4d1ed2aa0>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -851,8 +851,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Feature Extraction:   0%|          | 0/80 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "Feature Extraction: 100%|██████████| 80/80 [00:27<00:00,  2.88it/s]\n",
-      "Feature Extraction: 100%|██████████| 79/79 [00:07<00:00, 10.88it/s]\n"
+      "Feature Extraction: 100%|██████████| 79/79 [00:07<00:00, 10.79it/s]\n"
      ]
     }
    ],
@@ -1020,7 +1027,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f8afc768b20>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fe4d1d579d0>"
       ]
      },
      "execution_count": 26,
@@ -1046,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
