reran all finetuning experiments with correct early stopping

--- a/project2/task2/finetuning/fine_enc.ipynb
+++ b/project2/task2/finetuning/fine_enc.ipynb
@@ -373,7 +373,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f024b1d7640>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fda9e59a2f0>"
       ]
      },
      "execution_count": 11,
@@ -669,7 +669,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7f0375d8be20>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fdbde2980d0>"
       ]
      },
      "execution_count": 22,
@@ -949,7 +949,7 @@
       "  return F.conv1d(input, weight, bias, self.stride,\n",
       "/home/janhsc/miniconda3/envs/ml4hc/lib/python3.10/site-packages/torch/nn/modules/conv.py:306: UserWarning: Plan failed with a cudnnException: CUDNN_BACKEND_EXECUTION_PLAN_DESCRIPTOR: cudnnFinalize Descriptor Failed cudnn_status: CUDNN_STATUS_NOT_SUPPORTED (Triggered internally at ../aten/src/ATen/native/cudnn/Conv_v8.cpp:919.)\n",
       "  return F.conv1d(input, weight, bias, self.stride,\n",
-      "Training Transformer:  86%|████████▌ | 86/100 [00:46<00:07,  1.84it/s, train_balanced_acc=0.981, train_loss=0.00183, val_balanced_acc=0.98, val_loss=0.00263] "
+      "Training Transformer:  86%|████████▌ | 86/100 [00:44<00:07,  1.95it/s, train_balanced_acc=0.981, train_loss=0.00183, val_balanced_acc=0.98, val_loss=0.00263] "
      ]
     },
     {
@@ -1167,7 +1167,7 @@
      "text": [
       "  0%|          | 0/100 [00:00<?, ?it/s]/home/janhsc/miniconda3/envs/ml4hc/lib/python3.10/site-packages/torch/autograd/graph.py:744: UserWarning: Plan failed with a cudnnException: CUDNN_BACKEND_EXECUTION_PLAN_DESCRIPTOR: cudnnFinalize Descriptor Failed cudnn_status: CUDNN_STATUS_NOT_SUPPORTED (Triggered internally at ../aten/src/ATen/native/cudnn/Conv_v8.cpp:919.)\n",
       "  return Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n",
-      "Training Transformer:  56%|█████▌    | 56/100 [00:45<00:35,  1.23it/s, train_balanced_acc=0.999, train_loss=0.000133, val_balanced_acc=0.986, val_loss=0.00603]"
+      "Training Transformer:  56%|█████▌    | 56/100 [00:43<00:34,  1.27it/s, train_balanced_acc=0.999, train_loss=0.000133, val_balanced_acc=0.986, val_loss=0.00603]"
      ]
     },
     {
@@ -1309,14 +1309,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training Transformer:  21%|██        | 21/100 [00:17<01:05,  1.20it/s, train_balanced_acc=0.983, train_loss=0.00177, val_balanced_acc=0.983, val_loss=0.00225]"
+      "Training Transformer:  43%|████▎     | 43/100 [00:34<00:45,  1.26it/s, train_balanced_acc=0.988, train_loss=0.00132, val_balanced_acc=0.982, val_loss=0.00228]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Early stopping at epoch 21. Best score was 0.9880 in epoch 36.\n"
+      "Early stopping at epoch 43. Best score was 0.9853 in epoch 23.\n"
      ]
     },
     {
@@ -1329,6 +1329,8 @@
    ],
    "source": [
     "N_EPOCHS=100\n",
+    "\n",
+    "early_stopping = EarlyStopping(start=20, patience=20, verbose=1, mode=\"max\")\n",
     "\n",
     "model_Q1_C = train_and_validate(\n",
     "    model = model_Q1_C,\n",
@@ -1401,7 +1403,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test loss: 0.0004, Test accuracy: 0.9928, Test balanced accuracy: 0.9889, Test F1 score: 0.9950\n"
+      "Test loss: 0.0004, Test accuracy: 0.9856, Test balanced accuracy: 0.9816, Test F1 score: 0.9900\n"
      ]
     }
    ],
@@ -1547,14 +1549,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training Transformer:  73%|███████▎  | 73/100 [00:40<00:14,  1.81it/s, train_balanced_acc=0.943, train_loss=0.00441, val_balanced_acc=0.956, val_loss=0.00394]"
+      "Training Transformer:  77%|███████▋  | 77/100 [00:38<00:11,  1.98it/s, train_balanced_acc=0.974, train_loss=0.00287, val_balanced_acc=0.969, val_loss=0.00358]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Early stopping at epoch 73. Best score was 0.9569 in epoch 53.\n"
+      "Early stopping at epoch 77. Best score was 0.9741 in epoch 57.\n"
      ]
     },
     {
@@ -1639,7 +1641,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test loss: 0.0007, Test accuracy: 0.9512, Test balanced accuracy: 0.9358, Test F1 score: 0.9664\n"
+      "Test loss: 0.0006, Test accuracy: 0.9701, Test balanced accuracy: 0.9633, Test F1 score: 0.9793\n"
      ]
     }
    ],
@@ -1745,7 +1747,8 @@
    "source": [
     "model_Q2_B = model_Q2_B.to(DEVICE)\n",
     "\n",
-    "optimizer = optim.AdamW(model_Q2_B.parameters(), lr=0.005, weight_decay=0.0001)"
+    "optimizer = optim.AdamW(model_Q2_B.parameters(), lr=0.005, weight_decay=0.0001)\n",
+    "early_stopping = EarlyStopping(start=20, patience=20, verbose=1, mode=\"max\")"
    ]
   },
   {
@@ -1757,14 +1760,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training Transformer:  47%|████▋     | 47/100 [00:39<00:44,  1.20it/s, train_balanced_acc=0.993, train_loss=0.000729, val_balanced_acc=0.981, val_loss=0.0027] "
+      "Training Transformer:  79%|███████▉  | 79/100 [01:02<00:16,  1.26it/s, train_balanced_acc=0.993, train_loss=0.000459, val_balanced_acc=0.984, val_loss=0.00273]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Early stopping at epoch 47. Best score was 0.9887 in epoch 27.\n"
+      "Early stopping at epoch 79. Best score was 0.9920 in epoch 59.\n"
      ]
     },
     {
@@ -1849,7 +1852,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test loss: 0.0003, Test accuracy: 0.9890, Test balanced accuracy: 0.9855, Test F1 score: 0.9924\n"
+      "Test loss: 0.0003, Test accuracy: 0.9914, Test balanced accuracy: 0.9880, Test F1 score: 0.9941\n"
      ]
     }
    ],
@@ -1886,6 +1889,7 @@
    "outputs": [],
    "source": [
     "model_Q2_C = model_Q2_C.to(DEVICE)\n",
+    "early_stopping = EarlyStopping(start=20, patience=20, verbose=1, mode=\"max\")\n",
     "#Note: We lowered the learning rate here\n",
     "optimizer = optim.AdamW(model_Q2_C.parameters(), lr=0.00005, weight_decay=0.0001)"
    ]
@@ -1899,14 +1903,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Training Transformer:  21%|██        | 21/100 [00:16<01:02,  1.26it/s, train_balanced_acc=0.957, train_loss=0.00374, val_balanced_acc=0.956, val_loss=0.00396]"
+      "Training Transformer:  69%|██████▉   | 69/100 [00:54<00:24,  1.27it/s, train_balanced_acc=0.99, train_loss=0.00127, val_balanced_acc=0.978, val_loss=0.00379] "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Early stopping at epoch 21. Best score was 0.9887 in epoch 27.\n"
+      "Early stopping at epoch 69. Best score was 0.9903 in epoch 49.\n"
      ]
     },
     {
@@ -1991,7 +1995,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test loss: 0.0003, Test accuracy: 0.9890, Test balanced accuracy: 0.9855, Test F1 score: 0.9924\n"
+      "Test loss: 0.0004, Test accuracy: 0.9818, Test balanced accuracy: 0.9783, Test F1 score: 0.9874\n"
      ]
     }
    ],
